Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h
@@ -42,9 +42,6 @@ public:
     RemoteDisplayListRecorderProxy(WebCore::ImageBuffer&, RemoteRenderingBackendProxy&, const WebCore::FloatRect& initialClip, const WebCore::AffineTransform&);
     ~RemoteDisplayListRecorderProxy() = default;
 
-    void resetNeedsFlush() { m_needsFlush = false; }
-    bool needsFlush() const { return m_needsFlush; }
-
     void convertToLuminanceMask() final;
     void transformToColorSpace(const WebCore::DestinationColorSpace&) final;
     void flushContext(WebCore::GraphicsContextFlushIdentifier);
@@ -53,10 +50,10 @@ private:
     template<typename T>
     void send(T&& message)
     {
-        if (UNLIKELY(!m_renderingBackend))
+        if (UNLIKELY(!(m_renderingBackend && m_imageBuffer)))
             return;
 
-        m_needsFlush = true;
+        m_imageBuffer->setNeedsFlush(true);
         m_renderingBackend->sendToStream(WTFMove(message), m_destinationBufferIdentifier);
     }
 
@@ -144,7 +141,6 @@ private:
     WebCore::RenderingResourceIdentifier m_destinationBufferIdentifier;
     WeakPtr<WebCore::ImageBuffer> m_imageBuffer;
     WeakPtr<RemoteRenderingBackendProxy> m_renderingBackend;
-    bool m_needsFlush { false };
 };
 
 } // namespace WebKit
