Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h
@@ -66,7 +66,7 @@ public:
     ~RemoteImageBufferProxy()
     {
         if (!m_remoteRenderingBackendProxy || m_remoteRenderingBackendProxy->isGPUProcessConnectionClosed()) {
-            m_remoteDisplayList.resetNeedsFlush();
+            setNeedsFlush(false);
             return;
         }
 
@@ -114,6 +114,11 @@ protected:
         Locker locker { m_receivedFlushIdentifierLock };
         m_receivedFlushIdentifier = flushIdentifier;
         m_receivedFlushIdentifierChangedCondition.notifyAll();
+    }
+
+    void setNeedsFlush(bool needsFlush) final
+    {
+        m_needsFlush = needsFlush;
     }
 
     void waitForDidFlushWithTimeout()
@@ -246,7 +251,7 @@ protected:
 
     void clearBackend() final
     {
-        m_remoteDisplayList.resetNeedsFlush();
+        setNeedsFlush(false);
         didFlush(m_sentFlushIdentifier);
         BaseConcreteImageBuffer::clearBackend();
     }
@@ -271,6 +276,7 @@ protected:
         auto& mutableThis = const_cast<RemoteImageBufferProxy&>(*this);
         mutableThis.flushDrawingContextAsync();
         m_remoteRenderingBackendProxy->putPixelBufferForImageBuffer(m_renderingResourceIdentifier, pixelBuffer, srcRect, destPoint, destFormat);
+        setNeedsFlush(true);
     }
 
     void convertToLuminanceMask() final
@@ -309,13 +315,13 @@ protected:
         if (UNLIKELY(!m_remoteRenderingBackendProxy))
             return false;
 
-        if (!m_remoteDisplayList.needsFlush())
+        if (!m_needsFlush)
             return hasPendingFlush();
         
         m_sentFlushIdentifier = WebCore::GraphicsContextFlushIdentifier::generate();
         LOG_WITH_STREAM(SharedDisplayLists, stream << "RemoteImageBufferProxy " << m_renderingResourceIdentifier << " flushDrawingContextAsync - flush " << m_sentFlushIdentifier);
         m_remoteDisplayList.flushContext(m_sentFlushIdentifier);
-        m_remoteDisplayList.resetNeedsFlush();
+        setNeedsFlush(false);
         return true;
     }
 
@@ -348,6 +354,7 @@ protected:
     WebCore::GraphicsContextFlushIdentifier m_receivedFlushIdentifier WTF_GUARDED_BY_LOCK(m_receivedFlushIdentifierLock); // Only modified on the main thread but may get queried on a secondary thread.
     WeakPtr<RemoteRenderingBackendProxy> m_remoteRenderingBackendProxy;
     RemoteDisplayListRecorderProxy m_remoteDisplayList;
+    bool m_needsFlush { false };
 };
 
 template<typename BackendType>
